--- a/resources/assets/admin/css/adminlte.css
+++ b/resources/assets/admin/css/adminlte.css
@@ -35007,6 +35007,7 @@ a.close.disabled, a.disabled.mailbox-attachment-close {
   border-top: 0;
   color: #666;
   padding: 20px;
+  border-radius:15px;
 }
 
 .login-card-body .input-group .form-control,
